foundation-objs/main/default/objects/Team_Mapping_SF_JIRA__mdt/Team_Mapping_SF_JIRA__mdt.object-meta.xml
<CustomObject>
    <label>Team Mapping SF&lt;&gt;JIRA</label>
    <pluralLabel>Team Mapping SF&lt;&gt;JIRA</pluralLabel>
</CustomObject>