foundation-objs/main/default/objects/Team_Mapping_SF_JIRA__mdt/fields/Default_Assignee_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Assignee_Id__c</fullName>
    <label>Default Assignee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>