foundation-objs/main/default/objects/Team_Mapping_SF_JIRA__mdt/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>This will store the value of Project Details</description>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>